Init three.js & html / add circular stage

--- a/index.html
+++ b/index.html
@@ -1,4 +1,14 @@
 <!DOCTYPE html>
 <html>
-  <body>Hello!</body>
+
+<head>
+  <title>me/v</title>
+</head>
+
+<body style="margin:0; overflow:hidden">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/103/three.min.js"
+    integrity="sha256-T4lfPbatZLyNhpEgCvtmXmlhOUq0HZHkDX4cMlQWExA=" crossorigin="anonymous"></script>
+  <script src="./mev.js"></script>
+</body>
+
 </html>
