--- a/index.html
+++ b/index.html
@@ -6,15 +6,29 @@
 </head>
 
 <body style="margin:0; overflow:hidden">
-  <div style="position: absolute; left:8px; top: 8px" id="vue_menu">
+  <div style="position: absolute; left:8px; top: 8px; background-color: white; width: 240px" id="vue_menu">
     Open vrm File<br />
-    <input type="file" @change="change_file"></div>
+    <input type="file" @change="change_file"></input>
+    <br />
+    Textures<br />
+    <div id="textures"></div>
+
   </div>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.10/vue.min.js"
+
+  <!-- Debug -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.10/vue.js"
+    integrity="sha256-ufGElb3TnOtzl5E4c/qQnZFGP+FYEZj5kbSEdJNrw0A=" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/103/three.js"
+    integrity="sha256-Dz4QEGvodtXoy6gQW91o97WHBVvVXj7WsVA2LOUigbs=" crossorigin="anonymous"></script>
+
+  <!-- Release -->
+  <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.10/vue.min.js"
     integrity="sha256-chlNFSVx3TdcQ2Xlw7SvnbLAavAQLO0Y/LBiWX04viY=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/103/three.min.js"
-    integrity="sha256-T4lfPbatZLyNhpEgCvtmXmlhOUq0HZHkDX4cMlQWExA=" crossorigin="anonymous"></script>
+    integrity="sha256-T4lfPbatZLyNhpEgCvtmXmlhOUq0HZHkDX4cMlQWExA=" crossorigin="anonymous"></script>-->
+
   <script src="./third_party/three_vrm-0.0.15.js"></script>
+  <script src="./third_party/three_orbit_controls.js"></script>
   <script src="./mev.js"></script>
 </body>
 
