--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     Textures<br />
     <div id="textures"></div>
 
+    <button @click="download_vrm">Download VRM</button>
+
   </div>
 
   <!-- Debug -->
@@ -28,7 +30,9 @@
     integrity="sha256-T4lfPbatZLyNhpEgCvtmXmlhOUq0HZHkDX4cMlQWExA=" crossorigin="anonymous"></script>-->
 
   <script src="./third_party/three_vrm-0.0.15.js"></script>
+  <script src="./third_party/three_gltf_exporter.js"></script>
   <script src="./third_party/three_orbit_controls.js"></script>
+  <script src="./third_party/file_saver.js"></script>
   <script src="./mev.js"></script>
 </body>
 
