--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     integrity="sha256-T4lfPbatZLyNhpEgCvtmXmlhOUq0HZHkDX4cMlQWExA=" crossorigin="anonymous"></script>-->
 
   <script src="./third_party/three_vrm-0.0.15.js"></script>
+  <script src="./third_party/three_gltf_loader.js"></script>
   <script src="./third_party/three_gltf_exporter.js"></script>
   <script src="./third_party/three_orbit_controls.js"></script>
   <script src="./third_party/file_saver.js"></script>
