Split VRM import/export to an ES6 module

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <script src="./third_party/three_gltf_exporter.js"></script>
   <script src="./third_party/three_orbit_controls.js"></script>
   <script src="./third_party/file_saver.js"></script>
-  <script src="./mev.js"></script>
+  <script type="module" src="./mev.js"></script>
 </body>
 
 </html>
