--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
     <section style="text-align: center">
       <div id="dropzone"
         style="height: 100px; width: 400px; border-style:dotted; border-color: grey; border-width: 3px; text-align: center; padding-top: 24px"
-        v-bind:style="{backgroundColor: bg_color}"
-        @dragover="file_dragover"
-        @dragleave="file_dragleave"
+        v-bind:style="{backgroundColor: bg_color}" @dragover="file_dragover" @dragleave="file_dragleave"
         @drop="file_drop">
         <img src="ui_asset/baseline-open_in_browser-24px.svg" width="48px" height="48px" style="filter:contrast(10%)">
         <br />
@@ -39,10 +37,11 @@
     <h2>テクスチャ</h2>
     <div id="textures"></div>
 
-    <h2>完成したVRMをダウンロード</h2>
-    サイズ: 123131B<br />
-    <button @click="download_vrm">ダウンロード</button>
-
+    <section v-if="final_vrm_ready">
+      <h2>完成したVRMをダウンロード</h2>
+      サイズ: {{final_vrm_size_approx}}<br />
+      <button @click="download_vrm">ダウンロード</button>
+    </section>
   </div>
 
   <!-- Debug -->
