Partial FBX loading

--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
 
   <script src="./third_party/three_gltf_loader.js"></script>
   <script src="./third_party/three_gltf_exporter.js"></script>
+  <script src="./third_party/zlib.js"></script>
+  <script src="./third_party/three_fbx_loader.js"></script>
   <script src="./third_party/three_orbit_controls.js"></script>
   <script src="./third_party/file_saver.js"></script>
   <script type="module" src="./mev.js"></script>
