Fix tris counting for GeometryBuffer w/o index buffer

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
     <h2>メッシュ</h2>
     <div id="meshes"></div>
 
+    <h2>マテリアル</h2>
+    <div id="materials"></div>
+
     <h2>テクスチャ</h2>
     <div id="textures"></div>
 
