Refactor VRM material repository & display shader name

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <section>
       <h2>パーツ</h2>
       <div v-for="part in parts">
-        {{part.name}}
+        {{part.name}} - {{part.shaderName}}
       </div>
     </section>
 
