--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <section style="text-align: center">
       <div id="dropzone"
-        style="height: 100px; width: 400px; border-style:dotted; border-color: grey; border-width: 3px; text-align: center; padding-top: 24px"
+        style="height: 100px; border-style:dotted; border-color: grey; border-width: 3px; text-align: center; padding-top: 24px"
         v-bind:style="{backgroundColor: bgColor}" @dragover="fileDragover" @dragleave="fileDragleave" @drop="fileDrop">
         <img src="ui_asset/baseline-open_in_browser-24px.svg" width="48px" height="48px" style="filter:contrast(10%)">
         <br />
@@ -36,7 +36,7 @@
       <div class="normal-text">身長: {{avatarHeight}}</div>
     </section>
 
-    <section>
+    <section style="max-height:600px; overflow-y:auto">
       <h2>パーツ</h2>
       <div v-for="part in parts">
         {{part.visibility}} {{part.name}} - {{part.numTris}} <br />
