Move VRM -> UI converter to vue.js computed properties

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </div>
       </section>
 
-      <section v-if=" finalVrmReady">
+      <section v-if="finalVrmSizeApprox">
         <h2>VRMに出力</h2>
         <div class="normal-text">サイズ: {{finalVrmSizeApprox}}</div>
         <div class="normal-text">ポリゴン: {{finalVrmTris}}</div>
