Don't show .vrm in toolbar (because it's meaningless) & omit UI reference to FBX because it's not working yet

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
 <body style="margin:0; overflow:hidden">
   <div style="position: absolute; left:30%; top: 200px; width:40%" id="vue_start_dialog">
-    <h2>VRMかFBXを読み込んで編集開始</h2>
+    <!--<h2>VRMかFBXを読み込んで編集開始</h2> -->
+    <h2>VRMを読み込む</h2>
 
     <section style="text-align: center">
       <div id="dropzone"
