--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta chartset="utf-8">
   <title>me/v</title>
   <link rel="stylesheet" href="./mev.css" type="text/css">
+  <link rel="stylesheet" href="./third_party/checkbox.css" type="text/css">
   <link rel="stylesheet" href="./third_party/mprogress.min.css" type="text/css">
 </head>
 
@@ -65,8 +66,12 @@
         <h2>パーツ</h2>
         <div style="max-height:300px; overflow-y:auto">
           <div v-for="part in parts">
-            {{part.visibility}} {{part.name}} - {{part.numTris}} <br />
-            <button @click="toggleVisible(part.name)">toggle</button>
+            <label class="pure-material-checkbox" style="width: 100%">
+              <input type="checkbox" @click="toggleVisible(part.name)" :checked="part.visibility">
+              <span>{{part.name}} <span class="text-aux"
+                  style="float: right; padding-right: 4px">{{part.numTris}}</span></span>
+            </label>
+            <br />
             <img style="border: 1px; border-color:black" v-bind:src="part.textureUrl" height="48px" /><span
               class="normal-text">{{part.shaderName}}</span>
           </div>
