Shrink textute height when possible

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                   style="float: right; padding-right: 4px">{{part.numTris}}</span></span>
             </label>
             <br />
-            <img style="border: 1px; border-color:black" v-bind:src="part.textureUrl" height="48px" /><span
+            <img style="border: 1px; border-color:black" v-bind:src="part.textureUrl" /><span
               class="normal-text">{{part.shaderName}}</span>
           </div>
         </div>
