--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
       <h1 style="display:inline-block">{{toolbarTitle}}</h1>
     </section>
 
-    <menu-section-emotion v-if="showEmotionPane" :preset-name="currentEmotionPresetName" :weight-configs="currentWeightConfigs" :blendshape-master="blendshapeMaster">
+    <menu-section-emotion v-if="showEmotionPane" :preset-name="currentEmotionPresetName"
+      :all-weight-candidates="allWeightCandidates" :weight-configs="currentWeightConfigs"
+      :blendshape-master="blendshapeMaster">
     </menu-section-emotion>
 
     <section id="loading_progress" style="padding: 8px" v-if="isLoading">
@@ -105,6 +107,15 @@
           <div v-for="weightConfig in weightConfigs">
           {{weightConfig.morphName}}<br/>
           <input type="range" min="0" max="100" step="1" @input="onChangeWeight($event, weightConfig)" @change="onChangeWeight($event, weightConfig)" :value="weightConfig.weight">  {{weightConfig.weight.toFixed(0)}}
+          </div>
+        </section>
+      </section>
+      <section style="padding: 8px">
+        <button @click="clickAddWeight">追加</button>
+        <input type="text" v-model="searchQuery">
+        <section style="max-height:300px; overflow-y:auto">
+          <div v-for="weightCandidate in weightCandidates" @click="addWeight(weightCandidate)">
+            {{weightCandidate.morphName}}
           </div>
         </section>
       </section>
