Hide messy vue.js template on window open

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </section>
   </div>
 
-  <div style="position: absolute; left:8px; top: 8px; width: 240px" id="vue_menu">
+  <div style="position: absolute; left:8px; top: 8px; width: 240px; display: none" id="vue_menu">
     <!-- Toolbar -->
     <section class="menu_toolbar">
       <button class="toolbar_button" v-if="showBackButton" @click="clickBackButton">
