--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </div>
 
       または<br />
-      <input type="file" @change="fileSelect"></input>
+      <input type="file" @change="fileSelect">
     </section>
 
     <section>
