Use QUnit for testing

--- a/test.html
+++ b/test.html
@@ -4,9 +4,14 @@
 <head>
   <meta chartset="utf-8">
   <title>me/v - tests</title>
+  <link rel="stylesheet" href="https://code.jquery.com/qunit/qunit-2.9.2.css">
 </head>
 
 <body>
+  <div id="qunit"></div>
+  <div id="qunit-fixture"></div>
+  <script src="https://code.jquery.com/qunit/qunit-2.9.2.js"></script>
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/103/three.js"
     integrity="sha256-Dz4QEGvodtXoy6gQW91o97WHBVvVXj7WsVA2LOUigbs=" crossorigin="anonymous"></script>
   <script src="./third_party/three_gltf_loader.js"></script>
