Display spring bones

--- a/index.html
+++ b/index.html
@@ -67,6 +67,13 @@
       </section>
 
       <section>
+        <h2>揺れもの</h2>
+        <div v-for="spring in springs">
+          {{spring}}
+        </div>
+      </section>
+
+      <section>
         <h2>パーツ</h2>
         <div style="max-height:300px; overflow-y:auto">
           <div v-for="part in parts">
