--- a/index.html
+++ b/index.html
@@ -68,22 +68,21 @@
 
       <section>
         <h2>揺れもの</h2>
-        <div v-for="spring in springs">
-          {{spring}}
-        </div>
+        {{springs.length}}個
       </section>
 
       <section>
         <h2>パーツ</h2>
         <div style="max-height:300px; overflow-y:auto">
           <div v-for="part in parts">
+            <!--
             <label class="pure-material-checkbox" style="width: 100%">
-              <input type="checkbox" @click="toggleVisible(part.name)" :checked="part.visibility">
+               <input type="checkbox" @click="toggleVisible(part.meshIx, part.primIx)" :checked="part.visibility"> -->
               <span>{{part.name}} <span class="text-aux"
                   style="float: right; padding-right: 4px">{{part.numTris}}</span></span>
             </label>
             <br />
-            <img style="border: 1px; border-color:black" v-bind:src="part.textureUrl" /><span
+            <img style="border: 1px; border-color:black; height: 48px" v-bind:src="part.textureUrl" /><span
               class="normal-text">{{part.shaderName}}</span>
           </div>
         </div>
