--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </section>
   </div>
 
-  <div style="position: absolute; left:30%; top: 100px; width:40%; display: none" id="vue_details_dialog">
+  <div style="position: absolute; left:25%; top: 50px; width:50%; display: none" id="vue_details_dialog">
     <!-- Toolbar -->
     <section class="menu_toolbar">
       <h1 style="display:inline-block">VRMデータ詳細</h1>
@@ -43,9 +43,7 @@
       </button>
     </section>
 
-    <section>
-      {{detailsText}}
-    </section>
+    <pre style="overflow:scroll; height: 800px">{{detailsText}}</pre>
   </div>
 
   <div style="position: absolute; left:8px; top: 8px; width: 240px; display: none" id="vue_menu">
@@ -110,8 +108,8 @@
         <h2>VRMに出力</h2>
         <div class="normal-text">サイズ: {{finalVrmSizeApprox}}</div>
         <div class="normal-text">ポリゴン: {{finalVrmTris}}</div>
-        <button @click="downloadVrm">ダウンロード</button>
-        <button @click="showDetails">詳細を見る</button>
+        <button @click="downloadVrm">ダウンロード</button><br/>
+        <a class="normal-text" href="#" @click="showDetails">データ詳細(開発者向け)</a>
       </section>
     </section>
   </div>
