Dump blendshape / morphs

--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
       </button>
     </section>
 
-    <pre style="overflow:scroll; height: 800px">{{detailsText}}</pre>
+    <pre style="overflow:scroll; height: 800px">{{detailsText}}
+{{morphDetails}}
+{{boneDetails}}</pre>
   </div>
 
   <div style="position: absolute; left:8px; top: 8px; width: 240px; display: none" id="vue_menu">
