--- a/test.html
+++ b/test.html
@@ -13,7 +13,7 @@
     <script src="https://unpkg.com/mocha@4.0.1/mocha.js"></script>
 
     <script>mocha.setup('bdd')</script>
-    <script type="module" src="vrm-reducer.test.js"></script>
+    <script type="module" src="vrm-reducer/algorithm.test.js"></script>
     <script type="module" class="mocha-init">
       mocha.checkLeaks();
       mocha.globals(['__VUE_DEVTOOLS_TOAST__']);
