--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body style="margin:0; overflow:hidden">
+  <!-- File Load Dialog -->
   <div style="position: absolute; left:30%; top: 200px; width:40%" id="vue_start_dialog">
     <!--<h2>VRMかFBXを読み込んで編集開始</h2> -->
     <h2>VRMを読み込む</h2>
@@ -34,6 +35,7 @@
     </section>
   </div>
 
+  <!-- Developer Info Window -->
   <div style="position: absolute; left:25%; top: 50px; width:50%; display: none" id="vue_details_dialog">
     <!-- Toolbar -->
     <section class="menu_toolbar">
@@ -60,6 +62,7 @@
     <pre v-if="currentTab == 'BONE'" style="overflow:scroll; height: 800px">{{boneDetails}}</pre>
   </div>
 
+  <!-- Main Menu Window -->
   <div style="position: absolute; left:8px; top: 8px; width: 240px; display: none" id="vue_menu">
     <!-- Toolbar -->
     <section class="menu_toolbar">
@@ -127,6 +130,17 @@
         <a class="normal-text" href="#" @click="showDetails">データ詳細(開発者向け)</a>
       </section>
     </section>
+  </div>
+
+  <!-- Animation Control Window -->
+  <div style="position: absolute; left: 280px; top: 8px; display: none" id="vue_anim_control">
+    <div style="display: inline-block; height: 48px; padding-top: 12px; color: #222222">アニメーション</div>
+    <button class="floating_button" v-if="showPlayButton" @click="clickPlayButton">
+      <img src="ui_asset/play_circle_outline-24px.svg"/>
+    </button>
+    <button class="floating_button" v-if="showPauseButton" @click="clickPauseButton">
+      <img src="ui_asset/pause_circle_outline-24px.svg"/>
+    </button>
   </div>
 
   <!-- Vue.js Components -->
