--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     </section>
   </div>
 
-  <!-- Animation Control Window -->
+  <!-- Display Control Window -->
   <div style="position: absolute; left: 280px; top: 8px; display: none" id="vue_anim_control">
     <div style="display: inline-block; height: 48px; padding-top: 12px; color: #222222">アニメーション</div>
     <button class="floating_button" v-if="showPlayButton" @click="clickPlayButton">
@@ -140,6 +140,14 @@
     </button>
     <button class="floating_button" v-if="showPauseButton" @click="clickPauseButton">
       <img src="ui_asset/pause_circle_outline-24px.svg"/>
+    </button>
+
+    <div style="display: inline-block; height: 48px; padding-top: 12px; color: #222222">ワイヤーフレーム表示</div>
+    <button class="floating_button" v-if="!wireframeEnabled" @click="clickEnableWireframe">
+      <img src="ui_asset/check_box_outline_blank-24px.svg"/>
+    </button>
+    <button class="floating_button" v-if="wireframeEnabled" @click="clickDisableWireframe">
+      <img src="ui_asset/check_box-24px.svg"/>
     </button>
   </div>
 
