Add test mesh data

--- a/reducer-debug.html
+++ b/reducer-debug.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta chartset="utf-8">
-  <title>me/v</title>
+  <title>me/v - reducer</title>
   <link rel="stylesheet" href="./mev.css" type="text/css">
   <link rel="stylesheet" href="./components/start-dialog.css" type="text/css">
   <link rel="stylesheet" href="./third_party/checkbox.css" type="text/css">
