--- a/reducer-debug.html
+++ b/reducer-debug.html
@@ -34,6 +34,8 @@
 
       <section>
         <h2>Stats</h2>
+        <div>{{numTris}} tris</div>
+        <div>{{numVerts}} verts</div>
         <button @click="clickStep">Step</button>
       </section>
     </section>
@@ -44,12 +46,6 @@
     integrity="sha256-ufGElb3TnOtzl5E4c/qQnZFGP+FYEZj5kbSEdJNrw0A=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/103/three.js"
     integrity="sha256-Dz4QEGvodtXoy6gQW91o97WHBVvVXj7WsVA2LOUigbs=" crossorigin="anonymous"></script>
-
-  <!-- Release -->
-  <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.10/vue.min.js"
-    integrity="sha256-chlNFSVx3TdcQ2Xlw7SvnbLAavAQLO0Y/LBiWX04viY=" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/103/three.min.js"
-    integrity="sha256-T4lfPbatZLyNhpEgCvtmXmlhOUq0HZHkDX4cMlQWExA=" crossorigin="anonymous"></script>-->
 
   <script src="./third_party/jimp.min.js"></script>
   <script src="./third_party/three_orbit_controls.js"></script>
