--- a/reducer-debug.html
+++ b/reducer-debug.html
@@ -37,6 +37,7 @@
         <div>{{numTris}} tris</div>
         <div>{{numVerts}} verts</div>
         <button @click="clickStep">Step</button>
+        <button @click="clickReduce">Reduce</button>
       </section>
     </section>
   </div>
