Show vertex indices

--- a/reducer-debug.html
+++ b/reducer-debug.html
@@ -36,6 +36,7 @@
         <h2>Stats</h2>
         <div>{{numTris}} tris</div>
         <div>{{numVerts}} verts</div>
+        <button @click="clickStripVertices">Strip Verices</button>
         <button @click="clickStep">Step</button>
         <button @click="clickReduce">Reduce</button>
       </section>
