Add boundary preservation constraint

--- a/reducer-debug.html
+++ b/reducer-debug.html
@@ -37,7 +37,8 @@
       <section>
         <h2>Actions</h2>
         <button @click="clickStripVertices">Strip Verices</button>
-        <button @click="clickReduce">Reduce</button>
+        <button @click="clickReduce">Reduce 1edge</button>
+        <button @click="clickReduce50">Reduce 50edge</button>
       </section>
 
       <section>
